# memegen

./: .appveyor.yml  .coveragerc  .deepsource.toml  .env  .gitattributes  .gitignore  .pep257  .pep8rc  .prettierrc.toml  .project  .pycodestyle.ini  .pydevproject  .pydocstyle.ini  .pylint.ini  .pylintrc  .pyup.yml  .scrutinizer.yml  .tool-versions  .travis.yml  .verchew.ini  404.html  CHANGELOG.md  CHANGES.md  CHECKS  CNAME  CONTRIBUTING.md  Containerfile  Dockerfile  HE_README.md  LICENSE.md  LICENSE.txt  Makefile  MemeGen.sublime-project  Pipfile  Procfile  Procfile.dev  Procfile.e2e  README.md  REVIEW.md  app.json  (+19 more)
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: Deploy_to_DEV_AKS.yaml  docker-image.yml
app/: config.py  errors.py  helpers.py  images.py  import_legacy_templates.py  main.py  models.py  settings.py  text.py  types.py  views.py
app/api/: __init__.py  auth.py  clients.py  docs.py  images.py  images_api.py  legacy_images.py  legacy_images_api.py  memes.py  shortcuts.py  templates.py
app/models/: __init__.py  font.py  overlay.py  template.py  text.py
app/static/: robots.txt
app/templates/: base.html  index.html
app/tests/: conftest.py  test_api.py  test_apis.py  test_apis_auth.py  test_apis_clients.py  test_apis_extras.py  test_apis_images.py  test_apis_memes.py  test_apis_shortcuts.py  test_apis_templates.py  test_docs.py  test_images.py  test_main.py  test_models.py  test_models_template.py  test_models_text.py  test_swagger.py  test_text.py  test_types.py  test_utils_images.py  test_utils_meta.py  test_utils_text.py  test_views.py  test_views_clients.py  test_views_examples.py  test_views_fonts.py  test_views_helpers.py  test_views_images.py  test_views_memes.py  test_views_shortcuts.py  test_views_templates.py
app/utils/: __init__.py  html.py  http.py  images.py  meta.py  text.py  urls.py
app/views/: __init__.py  clients.py  examples.py  fonts.py  helpers.py  images.py  memes.py  schemas.py  shortcuts.py  templates.py
backend/: helpers.py  images.py  import_legacy_templates.py  main.py  models.py  settings.py  types.py  views.py
backend/api/: images.py  templates.py
backend/tests/: test_api.py  test_images.py  test_swagger.py
clients/: index.html
custom_theme/: main.html
data/cache/: .gitignore
data/fonts/: OFL.txt
data/images/: .gitignore
docs/: clients.md  examples.md  guide.md  maintenance.json
docs/theme/: main.html
examples/: index.html
fonts/: HG-Mincho-B.ttc  SIL Open Font License.txt
frontend/: index.html  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
guide/: index.html
k8s/: deployment.yaml  service.yaml
memegen/: .pyup.yml  __init__.py  app.py  extensions.py  factory.py  settings.py
memegen/domain/: __init__.py  font.py  image.py  template.py  text.py
memegen/routes/: __init__.py  _cache.py  _common.py  _parser.py  _settings.py  _utils.py  aliases.py  api_aliases.py  api_fonts.py  api_legacy.py  api_links.py  api_magic.py  api_root.py  api_search.py  api_templates.py  custom.py  default.js  examples.py  fonts.py  future.py  generator.py  image.py  index.py  latest.py  link.py  links.py  magic.py  overview.py  root.py  static.py  templates.py
memegen/services/: __init__.py  _base.py  font.py  image.py  link.py  template.py
memegen/static/: index.html
memegen/stores/: __init__.py  font.py  image.py  template.py
memegen/templates/: base.html  custom.html  examples.html  future.html  generator.html  image.html  index.html  latest.html  layout.html  magic.html  memegen.html  overview.html  share.html
memegen/test/: __init__.py  conftest.py  test_app.py  test_domain_font.py  test_domain_template.py  test_domain_text.py  test_routes__common.py  test_services_image.py  test_services_link.py  test_services_template.py  test_settings.py
memegen/tests/: __init__.py  conftest.py  test_app.py  test_domain_font.py  test_domain_template.py  test_domain_text.py  test_factory.py  test_routes__common.py  test_routes_utils.py  test_services_template.py  test_settings.py
migrations/: script.py.mako
migrations/versions/: 7da56a4eb387_add_meme_and_words_tables.py  a7a9acdc0670_make_keys_unique.py  bcb76d229183_delete_memes_table.py
requirements/: ci.txt  dev.txt
scripts/: check_deployment.py  generate_sample_images.py  import_legacy_templates.py  run_gui.py  simulate_load.py  test_deployment.py
search/: search_index.json
server/: main.py
service/: .gitignore  handler.py  package.json  pyproject.toml  serverless.yml
templates/3hd/: config.yml
templates/_custom/: config.yml
templates/_error/: config.yml
templates/_test/: config.yml
templates/aag/: config.yml
templates/ackbar/: config.yml
templates/afraid/: config.yml
templates/agnes/: config.yml
templates/aint-got-time/: config.yml
templates/ams/: config.yml
templates/ants/: config.yml
templates/apcr/: config.yml
templates/astronaut/: config.yml
templates/atis/: config.yml
templates/away/: config.yml
templates/awesome/: config.yml
templates/awesome-awkward/: config.yml
templates/awkward/: config.yml
templates/awkward-awesome/: config.yml
templates/bad/: config.yml
templates/badchoice/: config.yml
templates/balloon/: config.yml
templates/bd/: config.yml
templates/because/: config.yml
templates/bender/: config.yml
templates/bihw/: config.yml
templates/bilbo/: config.yml
templates/biw/: config.yml
templates/blb/: config.yml
templates/boat/: config.yml
tests/: __init__.py  conftest.py  test_all.py  test_api.py  test_api_aliases.py  test_api_fonts.py  test_api_links.py  test_api_magic.py  test_api_root.py  test_api_templates.py  test_custom.py  test_images.py  test_images_examples.py  test_index.py  test_latest.py  test_magic.py  test_routes_aliases.py  test_routes_fonts.py  test_routes_generator.py  test_routes_image.py  test_routes_index.py  test_routes_latest.py  test_routes_links.py  test_routes_magic.py  test_routes_overview.py  test_routes_root.py  test_routes_static.py  test_routes_templates.py  utils.py
theme/: main.html
(+337 files in other folders)
