[tool.poetry]

name = "memegen"
version = "11.1"
description = "The free and open source API to generate memes."
authors = ["Jace Browning <support@maketested.com>"]
license = "MIT"

packages = [{ include = "app" }]

[tool.poetry.dependencies]

python = "^3.13"

# Sanic
sanic = "~25.3" # run 'poetry update sanic-ext sanic-testing' when changing this
sanic-ext = "*"

# Markdown
markdown = "~3.9"
pymdown-extensions = "^10.7"
pygments = "^2.19.2"

# Images
pillow = "~11.3" # upgrades blocked by https://github.com/jay3332/pilmoji/issues/46
pilmoji = { git = "https://github.com/jay3332/pilmoji", branch = "2.0" }
spongemock = "~1.0.0"

# Utilities
aiocache = "~0.12.3"
aiohttp = "^3.13.1"
anyio = "^3.6.2"
datafiles = "^2.3.4"
furl = "^2.1.4"
webp = "~0.4"

# Production
bugsnag = "^4.8"
gunicorn = "^23.0"
uvicorn = "~0.37.0"

[tool.poetry.group.dev.dependencies]

# Formatting
isort = "^7.0"
black = "^25.9"

# Type Checking
mypy = "^1.18.2"
autoflake = "^2.3"
types-aiofiles = "*"
types-requests = "*"
types-setuptools = "*"

# Testing
pytest = "^8.4.2"
pytest-asyncio = "*"
pytest-describe = "^2.2"
pytest-expecter = "^3.0"
pytest-random = "*"
pytest-cov = "^7.0"
sanic-testing = "*"
aioresponses = "*"
locust = "^2.42.0"

# Coverage
coveragespace = "^6.1"

# Documentation
mkdocs = "^1.2.3"

# Utilities
honcho = "^2.0"
ipdb = "*"
rope = "^1.14"
watchdog = { version = "^2.2", extras = ["watchmedo"] }

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

plugins = "datafiles.plugins:mypy"

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

testpaths = "app"

addopts = """
--no-header \
--random \
--show-capture=log \
--cov=app --cov-report=term-missing:skip-covered --cov-report=html:.cache/htmlcov --no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = "slow"

asyncio_mode = "strict"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
